salesforce/10.12/modules/ROOT/pages/salesforce-connector-troubleshoot.adoc
= Troubleshoot Salesforce Connector 10.12 - Mule 4
:page-aliases: connectors::salesforce/salesforce-troubleshoot.adoc

== Upsert

Unless you configure the External ID Field Name for the sObject to which you are trying to upsert, the Upsert operation fails.

The Upsert operation does not work with the sObject `priceBookentry2`.

Although you can't change the `contentType` value for a bulk upsert, you can use the Create job operation to set the content type to either CSV (or zipped CSV if you're near the character limit) and then follow up with the Create batch operation.

== Query

Although you can see the fields of an sObject and their corresponding types via DataSense, the Query operation returns all fields as `String`.

To use the actual type of a field, use a Transform or Transform Message component to convert the field to the desired type.

Although the `CreatedDate` field appears as `dateTime`, the query returns a `String` value that represents the date. To use the field as a `dateTime` field, configure it using a Transform Message component.

To store `Date` and `dateTime` fields, use DataWeave expressions to create `Date` and `Calendar` Java objects.

== Insert Values in a Salesforce Connector List

Inserting dependent values into an existing list in Salesforce Connector does not always work. Test to confirm this functionality.

== Evaluate Values in a Salesforce List

If you are evaluating contents against a value in an existing list field in Salesforce, use the exact value in the list. For example, if you use the value `US` to evaluate against the contents of a list that contains the value `USA`, the evaluation works, but the result returns two values in the  list: one for `US` and one for `USA`.

== Currency

Currency values cannot exceed 18 characters in length.

When working with multiple currencies, be aware of which currency your sObject uses so that you avoid inaccurate entries. The default currency matches the location at the organization level.

== Limits on API Calls

You must know the scope of the rate limiting policy that applies to your account so that you do not exceed the number of allotted API calls per day.

== Opportunity Object

When extracting data from a Salesforce Opportunity object, be aware that a "quarter" in this context is relative to the financial year of the organization and not necessarily to the calendar year.

== Japanese Support

Salesforce Connector supports Japanese characters for all operations, with these exceptions:

* The *Publish Streaming Channel* operation does not support Japanese characters in the *Streaming Channel Name*, which can contain alphanumeric and the `&#95;` or `/` characters only. See https://developer.salesforce.com/docs/atlas.en-us.228.0.object_reference.meta/object_reference/sforce_api_objects_streamingchannel.htm[Salesforce Streaming channel documentation].

* Metadata operations might return error messages if some fields contain Japanese characters. For example, creating custom objects or custom fields with a `fullName` that contains Japanese characters triggers a `FIELD_INTEGRITY_EXCEPTION` with the following message: +
`The Object Name field can only contain underscores and alphanumeric characters. It must be unique, begin with a letter, not include spaces, not end with an underscore, and not contain two consecutive underscores.`

== Upserting picklist values

Using the Upsert Metadata operation for a picklist field in any object will only update the picklist mapping for that specific object. If you need to update the actual picklist values(add new values to the picklist or remove some value), you will have to use the Deploy Metadata operation. Based on whether the picklist is tied to custom field or is a global picklist, the users would have to perform a metadata deploy of Custom Field or Global Picklist.

== Understand Common Throws

Here is a list of common throw messages and how to interpret them.

* SALESFORCE:CONNECTIVITY

 A problem occurred and a connection could not be established.

* SALESFORCE:INVALID_INPUT

 The provided input data for an operation is not valid.

* SALESFORCE:INVALID_RESPONSE

 The response from the server cannot be processed.

* SALESFORCE:LIMIT_EXCEEDED

 A specific limit is exceeded, for example, if you try to create more than 200 entities at once with the *Create* operation.

* SALESFORCE:MUTUAL_AUTHENTICATION_FAILED

 The mutual authentication failed.

* SALESFORCE:NOT_FOUND

 The server could not find the requested resource.

* SALESFORCE:RETRY_EXHAUSTED

 The maximum number of retries for the operation is reached. 

* SALESFORCE:TIMEOUT

 A specific request takes longer than a configured amount of time to complete.

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* xref:salesforce-connector-config-topics.adoc[Additional Configuration]
* xref:salesforce-connector-examples.adoc[Examples]
* https://help.mulesoft.com[MuleSoft Help Center]
